deployments/kuard-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-kustomize
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard-kustomize
